Overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@ body {
   height: 100%;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   overscroll-behavior-y: none;
+  position: fixed;
+  overflow: hidden;
 }
 
 :root {
